--- a/src/styles/common/variables.scss
+++ b/src/styles/common/variables.scss
@@ -194,4 +194,12 @@ $colors: map.merge(
   // Easing
 
   --easing: cubic-bezier(0.23, 1, 0.32, 1);
+
+  // Header
+
+  --header-height: 80px;
+
+  @include media('<tablet') {
+    --header-height: 60px;
+  }
 }
