--- a/src/styles/controls/xslider.scss
+++ b/src/styles/controls/xslider.scss
@@ -87,7 +87,7 @@
   }
 
   .xslider--100vh & {
-    height: calc(100vh - var(--header-height, 0px));
+    height: 100vh;
   }
 }
 
